--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -48,16 +48,16 @@
             <div id="carouselExampleAutoplaying" class="carousel slide tamanioCarrusel  " data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../assets/img/foto2.jpg" class="d-block w-100" alt="...">
+                    <img src="../assets/img/foto2.jpg" class="d-block w-100" alt="foto Galeria camion de bomberos">
                   </div>
                   <div class="carousel-item">
-                    <img src="../assets/img/foto3.jpg" class="d-block w-100" alt="...">
+                    <img src="../assets/img/foto3.jpg" class="d-block w-100" alt="foto Galeria camion de bomberos">
                   </div>
                   <div class="carousel-item">
-                    <img src="../assets/img/foto4.jpg" class="d-block w-100" alt="...">
+                    <img src="../assets/img/foto4.jpg" class="d-block w-100" alt="foto Galeria camion de bomberos">
                   </div>
                   <div class="carousel-item">
-                    <img src="../assets/img/foto5.jpg" class="d-block w-100" alt="...">
+                    <img src="../assets/img/foto5.jpg" class="d-block w-100" alt="foto Galeria camion de bomberos">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
