PreEntrega3 iniciando con SASS, no pude hacerlo funcionar con el nodejs y voy a probar con el plugin

--- a/pages/colabora.html
+++ b/pages/colabora.html
@@ -11,7 +11,7 @@
 
 </head>
     <body>
-        <header class="header">
+        <header class="header posicionHeader">
             <nav class="navbar navbar-expand-lg navbar-light bg-dark">
                 <div class="container-fluid">
                    <div class="contenedorLogo">     
