--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 </head>
     <body>
-        <header >
+        <header class="posicionHeader">
                    
                     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
                         <div class="container-fluid contenedorNav">
