--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -11,7 +11,7 @@
 
 </head>
     <body>
-        <header >
+        <header class="posicionHeader ">
                    
             <nav class="navbar navbar-expand-lg navbar-light bg-dark">
                 <div class="container-fluid">
