PreEntrega3Sass reacomodando el proyecto en sass, utilizando la anidacion y el uso de variables y maps

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                           <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0 backNav justify-content-end contenedorListaItems  ">
-                              <li class="nav-item listaItems "><a class="nav-link active tipografiaAnclas" aria-current="page" href="#">Inicio</a></li>
-                              <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="./pages/nosotros.html">Nosotros</a></li>
+                              <li class="nav-item listaItems "><a class="nav-link active tipografiaAnclas inicio" aria-current="page" href="#">Inicio</a></li>
+                              <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas " aria-current="page" href="./pages/nosotros.html">Nosotros</a></li>
                               <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="./pages/galeria.html">Galeria</a></li>
                               <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="./pages/colabora.html">Colaborá</a></li>
                               <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="./pages/unite.html">Unite</a></li>
@@ -62,7 +62,7 @@
 
             <section class="row  align-items-center pt-4">
 
-                <div class=" col-md-4 pt-4  contenedorInfoFooter">
+                <div class=" col-md-4 pt-4  ">
                     <p class="footerLeftInfo ">Direccion: 25 de Mayo de 1810 N°2402, Florencio Varela.</p>
                     <p class="footerLeftInfo ">E-mail: bomberosvoluntariosvarela@gmail.com</p>                
                     <p class="footerLeftInfo ">Telefono: 4255-2022</p>
