--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -28,7 +28,7 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 backNav justify-content-end  ">
                       <li class="nav-item listaItems "><a class="nav-link active tipografiaAnclas" aria-current="page" href="../index.html">Inicio</a></li>
                       <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="../pages/nosotros.html">Nosotros</a></li>
-                      <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="#">Galeria</a></li>
+                      <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas galeria" aria-current="page" href="#">Galeria</a></li>
                       <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="../pages/colabora.html">Colaborá</a></li>
                       <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="../pages/unite.html">Unite</a></li>
                       
