--- a/pages/colabora.html
+++ b/pages/colabora.html
@@ -28,7 +28,7 @@
                       <li class="nav-item listaItems "><a class="nav-link active tipografiaAnclas" aria-current="page" href="../index.html">Inicio</a></li>
                       <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="../pages/nosotros.html">Nosotros</a></li>
                       <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="../pages/galeria.html">Galeria</a></li>
-                      <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="#">Colaborá</a></li>
+                      <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas colabora" aria-current="page" href="#">Colaborá</a></li>
                       <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="../pages/unite.html">Unite</a></li>
                       
                     </ul>                    
