--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -27,7 +27,7 @@
 
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 backNav justify-content-end  ">
                       <li class="nav-item listaItems "><a class="nav-link active tipografiaAnclas" aria-current="page" href="../index.html">Inicio</a></li>
-                      <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="#">Nosotros</a></li>
+                      <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas nosotros" aria-current="page" href="#">Nosotros</a></li>
                       <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="../pages/galeria.html">Galeria</a></li>
                       <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="../pages/colabora.html">Colaborá</a></li>
                       <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="../pages/unite.html">Unite</a></li>
