--- a/pages/unite.html
+++ b/pages/unite.html
@@ -30,7 +30,7 @@
                       <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="../pages/nosotros.html">Nosotros</a></li>
                       <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="../pages/galeria.html">Galeria</a></li>
                       <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="../pages/colabora.html">Colaborá</a></li>
-                      <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="#">Unite</a></li>
+                      <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas unite" aria-current="page" href="#">Unite</a></li>
                       
                     </ul>                    
                   </div>
