PreEntrega3Sass termine de anidar y poner las variables y un mapa. Ademas de crear todos los scss

--- a/pages/colabora.html
+++ b/pages/colabora.html
@@ -55,7 +55,7 @@
                 </button></a>
               
                
-                <a href="https://cafecito.app/" target="_blank"><button class="botonCafecito botones ">
+                <a class="cafecito" href="https://cafecito.app/" target="_blank"><button class="botonCafecito botones ">
                  </button></a>
               </div>
             </section>
