PreEntrega3Sass, agregue animaciones, todavia tengo que ver de usar una libreria que no pude

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -87,9 +87,9 @@
                 </div>      
 
                 <div class="col-md-4 ptba-4 d-flex  redes ">                 
-                    <a class="iconos" href="https://www.facebook.com/bomberosvoluntarios.florenciovarela/?locale=es_LA" target="_blank"><img class="tamanioIcon" src="../assets/img/logo_facebook.png" alt="Facebook"></a>
-                    <a class="iconos" href="https://www.instagram.com/bomberosfciovarela/?hl=es-la" target="_blank"><img class="tamanioIcon" src="../assets/img/logo_instagram.png" alt="Instagram"></a>
-                    <a class="iconos" href="https://www.tiktok.com/@bomberosflorenciovarela" target="_blank"><img class="tamanioIcon" src="../assets/img/logo_tiktok.png" alt="TikTok"></a>
+                    <a class="iconos facebook" href="https://www.facebook.com/bomberosvoluntarios.florenciovarela/?locale=es_LA" target="_blank"><img class="tamanioIcon" src="../assets/img/logo_facebook.png" alt="Facebook"></a>
+                    <a class="iconos instagram" href="https://www.instagram.com/bomberosfciovarela/?hl=es-la" target="_blank"><img class="tamanioIcon" src="../assets/img/logo_instagram.png" alt="Instagram"></a>
+                    <a class="iconos tiktok" href="https://www.tiktok.com/@bomberosflorenciovarela" target="_blank"><img class="tamanioIcon" src="../assets/img/logo_tiktok.png" alt="TikTok"></a>
                 </div>           
                 
                 <div class="contenedorFooterLogo col-sm-12 col-md-4"> 
