--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
 
                     <div class="d-flex col-sm-12 col-md-12 justify-content-center align-items-center contenedorVideo  pb-md-5 pt-5">
-                        <video controls class="videoBomberos " src="./assets/video/bomberos.mp4" ></video>
+                        <video controls class="videoBomberos " src="./assets/video/bomberos.mp4" autoplay ></video>
                     </div>
                 </section>
                     
@@ -69,9 +69,9 @@
                 </div>      
 
                 <div class="col-md-4 ptba-4 d-flex  redes ">                 
-                    <a class="iconos" href="https://www.facebook.com/bomberosvoluntarios.florenciovarela/?locale=es_LA" target="_blank"><img class="tamanioIcon" src="./assets/img/logo_facebook.png" alt="Facebook"></a>
-                    <a class="iconos" href="https://www.instagram.com/bomberosfciovarela/?hl=es-la" target="_blank"><img class="tamanioIcon" src="./assets/img/logo_instagram.png" alt="Instagram"></a>
-                    <a class="iconos" href="https://www.tiktok.com/@bomberosflorenciovarela" target="_blank"><img class="tamanioIcon" src="./assets/img/logo_tiktok.png" alt="TikTok"></a>
+                    <a class="iconos facebook" href="https://www.facebook.com/bomberosvoluntarios.florenciovarela/?locale=es_LA" target="_blank"><img class="tamanioIcon" src="./assets/img/logo_facebook.png" alt="Facebook"></a>
+                    <a class="iconos instagram" href="https://www.instagram.com/bomberosfciovarela/?hl=es-la" target="_blank"><img class="tamanioIcon" src="./assets/img/logo_instagram.png" alt="Instagram"></a>
+                    <a class="iconos tiktok" href="https://www.tiktok.com/@bomberosflorenciovarela" target="_blank"><img class="tamanioIcon" src="./assets/img/logo_tiktok.png" alt="TikTok"></a>
                 </div>           
                 
                 <div class="contenedorFooterLogo col-sm-12 col-md-4"> 
