PreEntrega3Sass agregue los meta de description

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <meta name="description" content="Bienvenido al portal oficial de los Bomberos Voluntarios de Florencio Varela. Explora nuestra página para conocer más sobre nuestra valiente labor en la prevención de incendios, rescates y asistencias en situaciones de emergencia. Descubre cómo nos esforzamos por salvaguardar vidas y propiedades en nuestra comunidad y sus alrededores."/>
+
     <title>Bomberos Voluntarios | Florencio Varela</title>    
     <link rel="icon" type=""  href="favicon.ico">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
