--- a/pages/colabora.html
+++ b/pages/colabora.html
@@ -4,6 +4,8 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Apoya a los valientes Bomberos Voluntarios de Florencio Varela a través de donaciones monetarias. Contribuye a nuestra causa a través de MercadoPago o Cafecito con tan solo un clic. Cada donación ayuda a fortalecer nuestro compromiso de salvaguardar vidas y propiedades en nuestra querida comunidad. ¡Únete a nosotros y marca la diferencia hoy!" />
+
     <title>Colaborá | Bomberos de Florencio Varela</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="icon" type=""  href="../favicon.ico">
@@ -45,7 +47,7 @@
 
         <main class="backgroundMain colaboraMain conteiner-fluid">
 
-            <h2 class="titulo">COLABORÁ</h2>
+            <h1 class="titulo">COLABORÁ</h1>
             <div class="contenedorTextoUnite colabora">
                 <h3 class="textoUnite h3">Tu colaboración, apaga llamas y enciende esperanzas</h3>
                 <h4 class="textoUnite h4">Tu apoyo económico nos permitirá mantener viva nuestra labor. <span>Contribuí</span> a la causa y sé parte de esta cadena solidaria</h4>
