--- a/pages/unite.html
+++ b/pages/unite.html
@@ -4,7 +4,9 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unite | Bomberos de Florencio Varela</title>
+    <meta name="description" content="Completa nuestro formulario de unión y únete al equipo valiente y dedicado de los Bomberos Voluntarios de Florencio Varela. Únete a una causa noble y desempeña un papel vital en la protección y el servicio a la comunidad. Descubre cómo puedes contribuir a salvaguardar vidas y propiedades en situaciones de emergencia en nuestra localidad y sus alrededores." />
+
+    <title>Uníte | Bomberos de Florencio Varela</title>
     <link rel="icon" type=""  href="../favicon.ico">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
@@ -45,10 +47,10 @@
         <main class="backgroundMain formulario  conteiner-fluid ">
 
             <div>
-            <h2 class="titulo">UNITE</h2>
+            <h1 class="titulo">UNITE</h1>
             <div class="contenedorTextoUnite w-100">
-                <h3 class="textoUnite h3">¿Querés ser Bombero Voluntario?</h3>
-                <h4 class="textoUnite h4">Convertite en parte de nuestra familia</h4>
+                <h2 class="textoUnite h3">¿Querés ser Bombero Voluntario?</h2>
+                <h3 class="textoUnite h4">Convertite en parte de nuestra familia</h3>
             </div>
 
             <form class="contenedorForm row w-100" action="404.html" method="post" target="_blank">
