--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -4,7 +4,9 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galeria | Bomberos de Florencio Varela</title>
+    <meta name="description" content="Explora nuestra galería de fotos para descubrir el día a día en el cuartel de los Bomberos Voluntarios de Florencio Varela y conocer de cerca nuestros vehículos especializados. Sumérgete en imágenes que capturan nuestra dedicación, entrenamiento y equipo de vanguardia, reflejando nuestro compromiso inquebrantable con la protección y el servicio a la comunidad local." />
+    
+    <title>Galería | Bomberos de Florencio Varela</title>
     <link rel="icon" type=""  href="../favicon.ico">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
@@ -43,7 +45,7 @@
         </header>
 
         <main class="backgroundMain conteiner-fluid">
-            <h2 class="titulo">GALERIA</h2>
+            <h1 class="titulo">GALERIA</h1>
 
             <div id="carouselExampleAutoplaying" class="carousel slide tamanioCarrusel  " data-bs-ride="carousel">
                 <div class="carousel-inner">
