PreEntrega3Sass termine de agregar animaciones, mixin, extend, los imports, responsive y sass

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
     <meta name="description" content="Bienvenido al portal oficial de los Bomberos Voluntarios de Florencio Varela. Explora nuestra página para conocer más sobre nuestra valiente labor en la prevención de incendios, rescates y asistencias en situaciones de emergencia. Descubre cómo nos esforzamos por salvaguardar vidas y propiedades en nuestra comunidad y sus alrededores."/>
+    <meta name="keywords" content="Inicio, Bomberos, Voluntarios, Florencio Varela, Seguridad, Comunidad, Rescate, Prevención"/>
 
     <title>Bomberos Voluntarios | Florencio Varela</title>    
     <link rel="icon" type=""  href="favicon.ico">
@@ -29,7 +30,7 @@
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0 backNav justify-content-end contenedorListaItems  ">
                               <li class="nav-item listaItems "><a class="nav-link active tipografiaAnclas inicio" aria-current="page" href="#">Inicio</a></li>
                               <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas " aria-current="page" href="./pages/nosotros.html">Nosotros</a></li>
-                              <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="./pages/galeria.html">Galeria</a></li>
+                              <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="./pages/galeria.html">Galería</a></li>
                               <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="./pages/colabora.html">Colaborá</a></li>
                               <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="./pages/unite.html">Unite</a></li>
                               
