--- a/pages/colabora.html
+++ b/pages/colabora.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Apoya a los valientes Bomberos Voluntarios de Florencio Varela a través de donaciones monetarias. Contribuye a nuestra causa a través de MercadoPago o Cafecito con tan solo un clic. Cada donación ayuda a fortalecer nuestro compromiso de salvaguardar vidas y propiedades en nuestra querida comunidad. ¡Únete a nosotros y marca la diferencia hoy!" />
+    <meta name="keywords" content="Donaciones, Colaboración, Contribución, Apoyo, Ayuda, Solidaridad, Generosidad, Bomberos, Voluntarios. Florencio Varela" />
+
 
     <title>Colaborá | Bomberos de Florencio Varela</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
@@ -31,7 +33,7 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 backNav justify-content-end  ">
                       <li class="nav-item listaItems "><a class="nav-link active tipografiaAnclas" aria-current="page" href="../index.html">Inicio</a></li>
                       <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="../pages/nosotros.html">Nosotros</a></li>
-                      <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="../pages/galeria.html">Galeria</a></li>
+                      <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="../pages/galeria.html">Galería</a></li>
                       <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas colabora" aria-current="page" href="#">Colaborá</a></li>
                       <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="../pages/unite.html">Unite</a></li>
                       
@@ -52,6 +54,8 @@
                 <h3 class="textoUnite h3">Tu colaboración, apaga llamas y enciende esperanzas</h3>
                 <h4 class="textoUnite h4">Tu apoyo económico nos permitirá mantener viva nuestra labor. <span>Contribuí</span> a la causa y sé parte de esta cadena solidaria</h4>
             </div>
+
+            
 
             <section class="row w-100 justify-content-center align-items-center sectionBoton">
               <div class="col-md-12 botonUno d-flex w-100 justify-content-center DosBotones">
