--- a/pages/unite.html
+++ b/pages/unite.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Completa nuestro formulario de unión y únete al equipo valiente y dedicado de los Bomberos Voluntarios de Florencio Varela. Únete a una causa noble y desempeña un papel vital en la protección y el servicio a la comunidad. Descubre cómo puedes contribuir a salvaguardar vidas y propiedades en situaciones de emergencia en nuestra localidad y sus alrededores." />
+    <meta name="keywords" content="Unirse, Adhesión, Incorporación, Cuerpo, Bomberos, Voluntarios, Compromiso, Unite, Formulario" />
 
     <title>Uníte | Bomberos de Florencio Varela</title>
     <link rel="icon" type=""  href="../favicon.ico">
@@ -30,7 +31,7 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 backNav justify-content-end  ">
                       <li class="nav-item listaItems "><a class="nav-link active tipografiaAnclas" aria-current="page" href="../index.html">Inicio</a></li>
                       <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="../pages/nosotros.html">Nosotros</a></li>
-                      <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="../pages/galeria.html">Galeria</a></li>
+                      <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="../pages/galeria.html">Galería</a></li>
                       <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas" aria-current="page" href="../pages/colabora.html">Colaborá</a></li>
                       <li class="nav-item listaItems"><a class="nav-link active tipografiaAnclas unite" aria-current="page" href="#">Unite</a></li>
                       
@@ -52,6 +53,12 @@
                 <h2 class="textoUnite h3">¿Querés ser Bombero Voluntario?</h2>
                 <h3 class="textoUnite h4">Convertite en parte de nuestra familia</h3>
             </div>
+            
+            <div class="porqueUnirse  ">
+
+                <p>Nuestro compromiso con la comunidad de Florencio Varela se refleja en nuestras estadísticas, que muestran un aumento constante en la frecuencia y la complejidad de las emergencias atendidas. Con más de <span>500 intervenciones anuales</span>, que van desde incendios estructurales hasta rescates de personas en situaciones de riesgo, la necesidad de voluntarios dedicados nunca ha sido tan apremiante</p>
+  
+              </div>
 
             <form class="contenedorForm row w-100" action="404.html" method="post" target="_blank">
 
