--- a/pages/404.html
+++ b/pages/404.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Inicio, Bomberos, Voluntarios, Florencio Varela, Seguridad, Comunidad, Rescate, Prevención"/>
 
     <title>Error 404 | Página no encontrada</title>    
-    <link rel="icon" type=""  href="favicon.ico">
+    <link rel="icon" type=""  href="..favicon.ico">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
     
