preentrega3 termine de corregir otra cosa mas

--- a/pages/404.html
+++ b/pages/404.html
@@ -6,7 +6,7 @@
     
 
     <title>Error 404 | Página no encontrada</title>    
-    <link rel="icon" type=""  href="..favicon.ico">
+    <link rel="icon" type=""  href="../favicon.ico">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
     
