--- a/pages/unite.html
+++ b/pages/unite.html
@@ -60,7 +60,7 @@
   
               </div>
 
-            <form class="contenedorForm row w-100" action="error.html" method="post" target="_blank">
+            <form class="contenedorForm row w-100" action="error.html"  target="_blank">
 
                 
 
