feature/PreEntrega3Sass agregue texto en inicio

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                          
                         <h1 class="tituloMain">BOMBEROS VOLUNTARIOS</h1>
                         <h2 class="subtituloMain">DE FLORENCIO VARELA</h2>
+                        <h3 class="bienvenidos" ><span class="bienvenidosSpan">¡Bienvenidos a la página de los Bomberos Voluntarios de Florencio Varela!</span> Nos enorgullece ser parte activa de esta comunidad, comprometidos con la protección y el servicio a nuestros vecinos en momentos de emergencia. Nuestra labor diaria se fundamenta en el valor, la dedicación y el espíritu solidario que nos impulsa a proteger vidas y propiedades en situaciones críticas. Te invitamos a unirte a esta noble causa, ya sea a través de donaciones, voluntariado o difusión de información importante.</h3>
                     </div>
 
                     <div class="d-flex col-sm-12 col-md-12 justify-content-center align-items-center contenedorVideo  pb-md-5 pt-5">
